# b2b-content-agent

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py
examples/: ai_meeting_necklace.md  input.txt
src/: __init__.py  config.py  main.py
src/b2b_content_agent/: __init__.py  __main__.py  content_generation_crew.py  crew.py  hitl_flow.py  llm_manager.py  main.py  rate_limiter.py  recovery.py  review_polish_crew.py  validators.py
src/b2b_content_agent/config/: agents.yaml  crew1_agents.yaml  crew1_tasks.yaml  crew2_agents.yaml  crew2_tasks.yaml  crew3_agents.yaml  crew3_tasks.yaml  tasks.yaml
src/b2b_content_agent/tools/: __init__.py  brand_voice_tools.py  case_study_tools.py  content_strategy_tools.py  persona_research_tools.py  pitch_deck_tools.py  product_analysis_tools.py  qa_review_tools.py  seo_optimization_tools.py  social_media_tools.py  white_paper_tools.py
tests/: test_full_system.py  test_hitl_orchestrator.py  test_hitl_session.py  test_minimal_run.py  test_rate_limiter.py
